--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,6 +78,7 @@ build:
     - docker --version
     - aws ecr get-login-password | docker login --username AWS --password-stdin $AWS_ECR_REGISTRY
   script:
+    - VERSION=1.0.0
     - docker build -t $DOCKER_REGISTRY .
     - docker tag $DOCKER_REGISTRY $DOCKER_REGISTRY:$VERSION
     - docker push $DOCKER_REGISTRY
